Fix layout issue
Issue: PLCR1801-28

--- a/src/BusinessLogic/Resources/css/app.css
+++ b/src/BusinessLogic/Resources/css/app.css
@@ -109,7 +109,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 15px;
 }
 
 /* utility classes */
@@ -263,6 +262,14 @@
     color: #155724;
     background-color: #d4edda;
     border-color: #c3e6cb;
+}
+
+#pl-page .md-checkbox {
+    margin-top: 15px;
+}
+
+#pl-main-page-holder #pl-error-template {
+    margin-top: 15px;
 }
 
 #pl-page .pl-input-mask {
